# conwaylife

./: .gitignore  WORKSPACE.bazel
be/cpp/: BUILD.bazel  main.cpp
be/cpp/conway/: BUILD.bazel  conway.cpp  conway.hpp
be/cpp/tests/: BUILD.bazel  conway_test.cpp
be/python/: conway.py  main.py  requirements.txt  server.py  test_conway.py  test_main.py  test_server.py
display/: display.js  index.html  style.css
python/: conway.py  test_conway.py
