load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

GTEST_SHA = "e40661d89b051e9ef4eb8a2420b74bf78b39ef41"

http_archive(
  name = "com_google_googletest",
  urls = ["https://github.com/google/googletest/archive/{}.zip".format(GTEST_SHA)],
  strip_prefix = "googletest-{}".format(GTEST_SHA),
)
